<resources>
	<string name="app_name">Domodroid</string>
	<string name="button1">Synchronize</string>
	<string name="button2">Network</string>
	<string name="button4">About</string>
	<string name="option">Option</string>
	<string name="bt_prev">Prev.</string>
	<string name="bt_next">Next</string>
	<string name="bt_year">Last year</string>
	<string name="bt_month">Last month</string>
	<string name="bt_week">Last week</string>
	<string name="bt_day">Last day</string>
	<string name="Ok">OK</string>
	<string name="help_Title">Domodroid</string>
	<string name="help_Text1">Domodroid free Android application under GNU GPLv3 Licence and developed by Pierre Lainé\n Modified by Dominique DAMBRAIN</string>
	<string name="help_Text2">Dim the lights, get informations about the inside temperature or the outside humidity, all with a single tap on your Android device. Requires a home automation system and a Domogik server. Domodroid offers you control of your Domogik home automation system with a large variety of devices supported</string>
	<string name="help_Text3">Domogik Project : http://www.domogik.org/</string>
	<string name="help_Text4">Domodroid documentation is avalaibale at: http://domodroid.readthedocs.org/en/1.4-dev/</string>
	<string name="help_Text5">Contacts by mailing list :\n domogik-developers@lists.labs.libre-entreprise.org</string>
	<string name="splash_title">Welcome to Domodroid 1.3 !</string>
	<string name="home_splash">This new version of Domodroid contains lot of new features and improvements that have not been tested on all kind of Android devices. If anything goes wrong, you can contact dev at the following address: http://wiki.domogik.org/Contact+and+support .</string>
	<string name="home_splash2">Please delete the Domodroid cache data from the \"Application Settings\" panel before using this new version.</string>
	<string name="reload_title">An existing backup of settings exists !</string>
	<string name="home_reload">Click \"Yes\" if you wish to reload it,\nor    \"No\" to start with a new setting\n        WARNING : maps will be lost  !</string>
	<string name="reloadOK">Yes</string>
	<string name="reloadNO">No</string>
	<string name="not_sync">Domodroid isn\'t synchronized with a server !</string>
	<string name="syncing">Synchronization</string>
	<string name="home_button1">- Menu -</string>
	<string name="home_button2">Options</string>
	<string name="home_button3">Synchronize</string>
	<string name="home_button4">About</string>
	<string name="map_button1">Add Widget</string>
	<string name="map_button2">Remove Widget</string>
	<string name="map_button2b">Remove all Widgets</string>
	<string name="map_button2c">Move Widgets</string>
	<string name="map_nothing">No Map Loaded, press \"Help\"</string>
	<string name="map_button3">Help</string>
	<string name="map_help_text">A folder called \"domodroid\" has been created at the root of the external storage directory (or internal for some devices). Map must be put in that folder using the PNG format or SVG format created from Illustrator (basic shapes supported). </string>
	<string name="map_move_text1">Select your widget, it will diseappear. Then tap where you want to put it again. </string>
	<string name="map_move_text2">Select Widget and replace it.</string>
	<string name="map_moveTitle">Move a widget</string>
	<string name="map_select">Select widget</string>
	<string name="map_change">Change Map</string>
	<string name="map_zoom">Zoom Map</string>
	<string name="map_drag">Drag Map</string>
	<string name="map_select_file">Select File</string>
	<string name="map_add_file_ok">New File Add</string>
	<string name="map_add_file_nok">Error adding this file</string>
	<string name="map_add_file_type_nok">File type not supported</string>
	<string name="Rename_file_title">Rename you file</string>
	<string name="Rename_file_message">Choose a new name for this file.\nNot required.</string>
	<string name="Rename_file_OK">Yes</string>
	<string name="Rename_file_NO">No</string>
	<string name="delete_map_title">Delete a map !</string>
	<string name="delete_map__message">Click \"Yes\" if you wish to delete this map,\nor    \"No\" \n        WARNING : all her mini-widgets will be lost  !</string>
	<string name="delete_map__OK">Yes</string>
	<string name="delete_map__NO">No</string>
	<string name="network_Title">- Options -</string>
	<string name="network_Text10">Graphic Period:</string>
	<string name="network_Text11">1 Day(s)</string>
	<string name="network_Text11a"> Day(s)</string>
	<string name="from">From : </string>
	<string name="to">    to : </string>
	<string name="Sync">Sync</string>
	<string name="Exit_Program">Exit Program</string>
	<string name="Rename_title">Rename</string>
	<string name="Rename_message">Set the text to be displayed.\nThis information will be lost if you make a new sync.</string>
	<string name="Delete_feature_title">Delete</string>
	<string name="Delete_feature_message">Delete this feature.\nThis information will be lost if you make a new sync.</string>
	<string name="New_ROOM_title">Create a Room</string>
	<string name="New_ROOM_message">Set the name of the new room.\nThis information will be lost if you make a new sync.</string>
	<string name="Wich_ROOM_message">Select a Room</string>
	<string name="New_AREA_title">Create an Area</string>
	<string name="New_AREA_message">Set the name of the new area.\nThis information will be lost if you make a new sync.</string>
	<string name="Wich_AREA_message">Select an Area</string>
	<string name="Add_widget_title">Select a Widget</string>
	<string name="Wich_feature_message">Select a Widget</string>
	<string name="Confirm_title">Confirm</string>
	<string name="Confirm_message">Are you sure you want this?</string>
	<string name="Wich_TYPE_message">Select a Type</string>
	<string name="Wich_ICON_message">Select an Icon</string>
	<string name="version">Rev</string>
	<string name="Hue">RGB Color</string>
	<string name="Sat">RGB Saturation</string>
	<string name="Bright">RGB Brightness</string>
	<string name="Field">RGB Field</string>
	<string name="Curcolor">Current Color</string>
	<string name="Red">Red</string>
	<string name="Green">Green</string>
	<string name="Blue">Blue</string>
	<string name="debug_settings">Debug configuration</string>
	<string name="debug_explain">This screen allow debugging configuration</string>
	<string name="debug_system">Log to system (Catlog)</string>
	<string name="debug_screen">Log to screen</string>
	<string name="debug_file">Log to text file</string>
	<string name="debug_dirpath">Target directory for text file</string>
	<string name="debug_filename">Log text filename</string>
	<string name="debug_bt_apply">Apply changes</string>
	<string name="debug_bt_cancel">Cancel</string>
	<string name="network_Text18">Dev:</string>
	<string name="map_settings">Map configuration</string>
	<string name="map_explain">This screen allow map view configuration</string>
	<string name="map_bt_apply">Apply changes</string>
	<string name="map_bt_cancel">Cancel</string>
	<string name="map_menu_explain">Map Multitouch Features :</string>
	<string name="map_option_drag">Drag:</string>
    <string name="map_option_zoom">Zoom:</string>
    <string name="map_option_max_size">Maximum Map Size:</string>
    <string name="map_option_size">300 px</string>
    <string name="map_option_advert">Activating multitouch or setting the maximum map size value to high might cause memory crashes.</string>
    <string name="map_option_hide_text">Hide text</string>
    <string name="map_option_menu_disable">Disallow editing map</string>
   	<string name="map_autozoom">Zoom auto in map mode:</string>
    <string name="OPTION_server_settings">Server configuration</string>
	<string name="OPTION_server_bt_apply">Apply changes</string>
	<string name="OPTION_server_bt_cancel">Cancel</string>
	<string name="OPTION_server_explain">This screen allow server configuration</string>
	<string name="OPTION_server_IP">Domogik Rinor IP Address</string>
	<string name="OPTION_server_IP_Title">SET IP or Address</string>
	<string name="OPTION_server_IP_Hint">http://address-rinor</string>
	<string name="OPTION_server_PORT">Domogik Rinor Port</string>
	<string name="OPTION_server_PORT_Title">Type port of domogik</string>
	<string name="OPTION_server_PORT_Hint">40405</string>
	<string name="OPTION_server_Path">Access path</string>
	<string name="OPTION_server_Path_Title">Type path of domogik</string>
	<string name="OPTION_server_Path_Hint">/</string>
	<string name="OPTION_server_Text2">Auto-Update Timer:</string>
	<string name="OPTION_server_Text3">2 Secondes</string>
	<string name="OPTION_server_http_user">Username</string>
	<string name="OPTION_server_http_user_Title">Type your username</string>
	<string name="OPTION_server_http_password">Http auth password</string>
	<string name="OPTION_server_http_password_Title">Type your http auth password</string>
    <string name="OPTION_butler_settings">Butler configuration</string>
	<string name="OPTION_butler_name">Butler name</string>
	<string name="OPTION_your_name">Your name</string>
	<string name="OPTION_butler_explain">This screen allow butler configuration</string>
	<string name="usage_settings">Widget configuration</string>
	<string name="usage_bt_apply">Apply changes</string>
	<string name="usage_bt_cancel">Cancel</string>
	<string name="usage_explain">This screen allow widget configuration</string>
	<string name="widget_choice">Alternative Widget:</string>
	<string name="graph_choice">Alternative Graph:</string>
	<string name="twocollandscapecheckbox">Nb of columns in landcape:</string>
	<string name="twocolportraitcheckbox">Nb of columns in portrait:</string>
	<string name="usage_byusagecheckbox">Force by usage for 0.3:</string>
	<string name="unusable">Not available</string>
	<string name="house_settings">House configuration</string>
	<string name="house_bt_apply">Apply changes</string>
	<string name="house_bt_cancel">Cancel</string>
	<string name="house_explain">This screen allow house configuration</string>
	<string name="house_add_area">Add an area</string>
	<string name="house_add_room">Add a room</string>
	<string name="house_add_widget">Add a widget</string>
	<string name="house_add_icon">Choose an icon</string>
	<string name="State">State : </string>
	<string name="light_stat_0">Off</string>
	<string name="light_stat_1">On</string>
	<string name="shutter_stat_0">Close</string>
	<string name="shutter_stat_1">Open</string>
	<string name="close">Close</string>
	<string name="open">Open</string>
	<string name="seconds">Seconds</string>
	<string name="pixels">Pixels</string>
	<string name="stats_title">Statistics about Domogik requests</string>
	<string name="stats_title_period">Last Period : </string>
	<string name="stats_cumuls">Engines running : </string>
	<string name="stats_period">Last period : </string>
	<string name="Send">Send</string>
	<string name="Received">Received</string>
	<string name="packets">packets</string>
	<string name="bytes">bytes</string>
	<string name="conditioning">Climatized air</string>
	<string name="appliance">Appliance</string>
	<string name="christmas_tree">Christmas tree</string>
	<string name="computer">Computers</string>
	<string name="door">Doors switches</string>
	<string name="electricity">Electricity</string>
	<string name="heating">Heating</string>
	<string name="light">Light</string>
	<string name="mirror">Mirror</string>
	<string name="music">Music</string>
	<string name="nanoztag">Nanoztag</string>
	<string name="portal">Portal</string>
	<string name="scene">Scenes</string>
	<string name="camera">Camera</string>
	<string name="security_camera">Security Camera</string>
	<string name="server">Server</string>
	<string name="socket">Socket</string>
	<string name="shutter">Shutter</string>
	<string name="telephony">Telephony</string>
	<string name="temperature">Temperature</string>
	<string name="tv">TV</string>
	<string name="map_option_start">Start directly on Map view</string>
</resources>