<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
android:title="Préférences">
 
 <PreferenceCategory android:title="@string/server_settings" android:summary="@string/server_explain">
     <EditTextPreference android:title="@string/server_IP"
         android:dialogTitle="rinorIP"
         android:key="rinorIP"/>
     <EditTextPreference android:title="@string/server_PORT"
         android:defaultValue="40405"
         android:dialogTitle="rinorPort"
         android:key="rinorPort"/>
     <EditTextPreference android:title="@string/server_Path"
         android:dialogTitle="rinorPath"
         android:key="rinorPath"/>
     <EditTextPreference android:title="@string/server_http_user"
         android:dialogTitle="http_auth_username"
         android:key="http_auth_username"/>
     <EditTextPreference android:title="@string/server_http_password"
         android:dialogTitle="http_auth_password"
         android:key="http_auth_password"
         android:inputType="textPassword"/>
     <Preference android:title="UPDATE_TIMER" android:key="UPDATE_TIMER"/>
     <Preference android:key="UPDATE_URL" android:title="UPDATE_URL"/>
 </PreferenceCategory><PreferenceCategory android:title="@string/usage_settings" android:summary="@string/usage_explain"><CheckBoxPreference android:summaryOn="Alternative on/off" android:summaryOff="Normal on/off" android:key="WIDGET_CHOICE" android:title="@string/widget_choice" />
 <CheckBoxPreference android:summaryOn="AChartengine Graph" android:summaryOff="Normal Graph" android:key="Graph_CHOICE" android:title="@string/graph_choice"/>
 <CheckBoxPreference android:summaryOn="twocol_lanscape on" android:summaryOff="twocol_lanscape off" android:key="twocol_lanscape" android:title="@string/twocollandscapecheckbox"/>
 <CheckBoxPreference android:summaryOn="twocol_portrait on" android:summaryOff="twocol_portrait off" android:key="twocol_portrait" android:title="@string/twocolportraitcheckbox"/>
 <CheckBoxPreference android:summaryOn="BY_USAGE on" android:summaryOff="BY_USAGE off" android:key="BY_USAGE" android:title="@string/usage_byusagecheckbox"/>
</PreferenceCategory><PreferenceCategory android:title="@string/map_settings" android:summary="@string/map_explain">
    <CheckBoxPreference android:summaryOn="DRAG on" android:summaryOff="DRAG off" android:key="DRAG" android:title="@string/map_option_drag"/>
    <CheckBoxPreference android:summaryOn="ZOOM of" android:summaryOff="ZOOM off" android:key="ZOOM" android:title="@string/map_option_zoom"/>
    <CheckBoxPreference android:summaryOn="HIDE on" android:summaryOff="HIDE off" android:key="HIDE" android:title="HIDE"/>
    <CheckBoxPreference android:summaryOn="map_menu_disable on" android:summaryOff="map_menu_disable off" android:key="map_menu_disable" android:title="@string/map_option_menu_disable"/>
    <CheckBoxPreference android:summaryOn="START_ON_MAP on" android:summaryOff="START_ON_MAP off" android:key="START_ON_MAP" android:title="@string/map_option_start"/>
    <CheckBoxPreference android:summaryOn="map_autozoom on" android:summaryOff="map_autozoom off" android:key="map_autozoom" android:title="@string/map_autozoom"/>
    <Preference android:title="@string/map_option_size" android:defaultValue="800" android:key="SIZE"/>
</PreferenceCategory><PreferenceCategory android:title="@string/debug_settings" android:summary="@string/debug_explain">
    <CheckBoxPreference android:summaryOn="LOG_DEBUG on" android:summaryOff="LOG_DEBUG off" android:key="LOG_DEBUG" android:title="LOG_DEBUG"/>
    <CheckBoxPreference android:summaryOn="LOG_ERROR on" android:summaryOff="LOG_ERROR off" android:key="LOG_ERROR" android:title="LOG_ERROR"/>
    <CheckBoxPreference android:summaryOn="LOG_INFO on" android:summaryOff="LOG_INFO off" android:key="LOG_INFO" android:title="LOG_INFO"/>
    <CheckBoxPreference android:summaryOn="LOG_VERBOSE on" android:summaryOff="LOG_VERBOSE off" android:key="LOG_VERBOSE" android:title="LOG_VERBOSE"/>
    <CheckBoxPreference android:summaryOn="LOG_WARNING on" android:summaryOff="LOG_WARNING off" android:key="LOG_WARNING" android:title="LOG_WARNING"/>
    <CheckBoxPreference android:summaryOn="SYSTEMLOG on" android:summaryOff="SYSTEMLOG off" android:key="SYSTEMLOG" android:title="@string/debug_system"/>
    <CheckBoxPreference android:summaryOn="SCREENLOG on" android:summaryOff="SCREENLOG off" android:key="SCREENLOG" android:title="@string/debug_screen"/>
    <CheckBoxPreference android:summaryOn="TEXTLOG on" android:summaryOff="TEXTLOG off" android:key="TEXTLOG" android:title="@string/debug_file"/>
    <EditTextPreference android:title="@string/debug_dirpath" android:dialogTitle="LOGPATH" android:key="LOGPATH"/>
    <EditTextPreference android:title="@string/debug_filename" android:dialogTitle="LOGNAME" android:key="LOGNAME"/>
    <CheckBoxPreference android:summaryOn="Device id show" android:summaryOff="Device id hide" android:key="DEV" android:title="@string/network_Text18"/>
</PreferenceCategory><PreferenceCategory android:title="@string/house_settings" android:summary="@string/house_explain"></PreferenceCategory>
 
 
 
 
 
</PreferenceScreen>