<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/bt_prev"
        android:tag="Prev"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/bt_prev"
        android:textSize="10sp" />

	<Button
	    android:id="@+id/bt_next"
	    android:tag="Next"
        android:layout_width="wrap_content"
	    android:layout_height="32dp"
	    android:layout_marginRight="25px"
	    android:text="@string/bt_next"
	    android:textSize="10sp" />

	<Button
	    android:id="@+id/bt_year"
	    android:tag="Year"
        android:layout_width="wrap_content"
	    android:layout_height="32dp"
	    android:layout_marginLeft="10px"
	    android:text="@string/bt_year"
	    android:textSize="10sp" />
	
	<Button
        android:id="@+id/bt_month"
        android:tag="Month"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
       	android:text="@string/bt_month" 
        android:textSize="10sp" />
	
	<Button
	    android:id="@+id/bt_week"
	    android:layout_width="wrap_content"
	    android:layout_height="32dp"
	    android:tag="Week"
	    android:text="@string/bt_week"
	    android:textSize="10sp"
	     />
	
	<Button
        android:id="@+id/bt_day"
        android:tag="Day"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
       	android:text="@string/bt_day"
        android:textSize="10sp" />

	<EditText
	    android:id="@+id/period"
	    android:layout_width="fill_parent"
	    android:layout_height="32dp"
	    android:ems="10"
	    android:gravity="center"
	    android:textSize="10sp" >
	   
	</EditText>
	
</LinearLayout>