<?xml version="1.0" encoding="utf-8"?>
<!--
 * This file is part of Domodroid.
 * 
 * Domodroid is Copyright (C) 2011 Pierre LAINE, Maxime CHOFARDET
 * 
 * Domodroid is free software: you can redistribute it and/or modify it under the
 * terms of the GNU General Public License as published by the Free Software
 * Foundation, either version 3 of the License, or (at your option) any later
 * version.
 * 
 * Domodroid is distributed in the hope that it will be useful, but WITHOUT ANY
 * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
 * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License along with
 * Domodroid. If not, see <http://www.gnu.org/licenses/>.
 -->
 
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:panel="http://schemas.android.com/apk/res/org.panel"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@drawable/background">

	<!-- Set center image + backgroud -->
		<FrameLayout android:layout_width="fill_parent"
			android:layout_height="40dip" android:id="@+id/TitleBar"
			android:gravity="center" android:orientation="horizontal">
			<ImageView android:id="@+id/app_name" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:src="@drawable/app_name"
				android:layout_gravity="right" android:paddingTop="5dip" android:paddingRight="5dip"/>
		</FrameLayout>


	<LinearLayout android:orientation="vertical"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:paddingTop="40dip" android:paddingLeft="5dip">
		<LinearLayout android:orientation="horizontal"
			android:paddingTop="10dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<ImageView android:id="@+id/domodroid"
				android:layout_width="40dip" android:layout_height="44dip"
				android:layout_centerHorizontal="true" android:paddingBottom="12dip"
				android:src="@drawable/domodroid" />
			<TextView android:text="@string/help_Title" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="25sp" android:textColor="#000000"/>
		</LinearLayout>


		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingTop="10dip" android:textColor="#FFFFFF"
			android:text="@string/help_Text1" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingTop="10dip" android:textColor="#FFFFFF"
			android:text="@string/help_Text2" />

		<TextView android:text="@string/help_Text3"
			android:autoLink="web" android:layout_width="wrap_content" android:textColor="#FFFFFF"
			android:layout_height="wrap_content" android:paddingTop="10dip">
		</TextView>
		
		<TextView android:text="@string/help_Text4"
			android:autoLink="web" android:layout_width="wrap_content" android:textColor="#FFFFFF"
			android:layout_height="wrap_content" android:paddingTop="10dip">
		</TextView>
	</LinearLayout>
</FrameLayout>	
