<?xml version="1.0" encoding="utf-8"?>
<!--
 * This file is part of Domodroid.
 * 
 * Domodroid is Copyright (C) 2011 Pierre LAINE, Maxime CHOFARDET
 * 
 * Domodroid is free software: you can redistribute it and/or modify it under the
 * terms of the GNU General Public License as published by the Free Software
 * Foundation, either version 3 of the License, or (at your option) any later
 * version.
 * 
 * Domodroid is distributed in the hope that it will be useful, but WITHOUT ANY
 * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
 * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License along with
 * Domodroid. If not, see <http://www.gnu.org/licenses/>.
 -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/background"
     android:scrollbarAlwaysDrawVerticalTrack="false" >

	<!-- Set center image + backgroud -->
	<FrameLayout android:layout_width="fill_parent"
		android:layout_height="40dip" 
		android:id="@+id/TitleBar"
		android:gravity="center" 
		android:orientation="horizontal">
		
		<ImageView 
		    android:id="@+id/app_name" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:src="@drawable/app_name"
			android:layout_gravity="right" 
			android:paddingTop="5dip" 
			android:paddingRight="5dip"/>
	</FrameLayout>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content">
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingLeft="5dip"
	    android:paddingTop="40dip" >

	   <TextView
	        android:id="@+id/map_explain"
	     	android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
	    	android:text="@string/map_explain"
	    	android:textColor="#999999" 
	    	android:textSize="15sp"
			android:gravity="center" 
			android:paddingRight="10dip"
			android:paddingBottom="20dip"
	    />
	    	    
	    <LinearLayout
	        android:id="@+id/layout_choices"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingTop="10dp"
	         >
			
			<LinearLayout
			    android:id="@+id/layout_choice_3"
		        android:layout_width="fill_parent"
		        android:layout_height="40dp"
		        android:orientation="horizontal"
		         >
		 <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"
                android:text="@string/map_menu_explain"
                android:textColor="#FFFFFF" />
			</LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dip" >

                <CheckBox
                    android:id="@+id/checkbox_drag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
				
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_option_drag"
                    android:textColor="#FFFFFF" />
               </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 >

                <CheckBox
                    android:id="@+id/checkbox_zoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/map_option_zoom"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
               
               <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 >

                   <CheckBox
                       android:id="@+id/checkbox_hide"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:paddingLeft="10dip"
                       android:text="@string/map_option_hide_text"
                       android:textColor="#FFFFFF" />
		        
			</LinearLayout>

               <LinearLayout
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                    >

                   <CheckBox
                       android:id="@+id/checkbox_menu_disable"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:paddingLeft="10dip"
                       android:text="@string/map_option_menu_disable"
                       android:textColor="#FFFFFF" />
               </LinearLayout>
				
				<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dip" >
                
                <CheckBox
                    android:id="@+id/mapautozoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                             
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/mapautozoom"
                    android:textColor="#FFFFFF" />
               
            	</LinearLayout>
               <LinearLayout
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                    >

                   <CheckBox
                       android:id="@+id/checkbox_start_on_map"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:paddingLeft="10dip"
                       android:text="@string/map_option_start"
                       android:textColor="#FFFFFF" />
               </LinearLayout>
			<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dip" >
				<!--  Max map size text -->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/map_option_max_size"
                    android:textColor="#FFFFFF" />
				<!--  Max map size value -->
                <TextView
                    android:id="@+id/progress3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_option_size"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
			 <!--  Choix de la taille des images MAP -->
	            <SeekBar
	                android:id="@+id/SeekBar3"
	                android:layout_width="fill_parent"
	                android:layout_height="0dip"
	                android:max="1000"
	                android:paddingLeft="20dip"
	                android:paddingRight="20dip"
	                android:paddingTop="10dip"
	                android:layout_weight="0.70"
		    	/>
	            
			<!--  Max map size warning -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/map_option_advert"
                android:textColor="#FFFFFF" />
            
            <!--  Layout for bottom buttons -->
			<LinearLayout
					    android:id="@+id/layout_buttons"
				        android:layout_width="fill_parent"
				        android:layout_height="40dp"
				        android:layout_gravity="bottom"
				        android:orientation="horizontal"
				         >
		
				<Button
				    android:id="@+id/map_OK"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="50"
				    android:text="@string/debug_bt_apply"
				     />
		
				<Button
				    android:id="@+id/map_Cancel" 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="50"
				    android:text="@string/debug_bt_cancel"
				     />
		
			 </LinearLayout>
	    </LinearLayout>
		
	</LinearLayout>
	</ScrollView>
	
	   
</FrameLayout>	
