<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout
	    android:id="@+id/layout_stats_title"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <TextView
	        android:id="@+id/text_stats_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:gravity="left"
	        android:text="@string/stats_title"  />
	    <TextView
	        android:id="@+id/textstatsPeriod"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:gravity="right"
	        android:text="@string/stats_title_period"  />
	    <TextView
	        android:id="@+id/textPeriodValue"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="10 m 0 sec"  />
	</LinearLayout>
	
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0.6dp"
	    android:id="@+id/separator1"
	    android:visibility="visible"
	    android:background="@android:color/black"/>
	
	<!-- Container for Cumulated at left, Periodic at right -->
    <LinearLayout
	    android:id="@+id/layout_container1"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
        <LinearLayout
		    android:id="@+id/layout_container_cumuls"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
	        android:orientation="vertical" >
	    
            <TextView
	        android:id="@+id/text_cumuls_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/stats_cumuls"  />
            
      	</LinearLayout>
      	<View
	    android:layout_width="0.6dp"
	    android:layout_height="fill_parent"
	    android:id="@+id/separator2"
	    android:visibility="visible"
	    android:background="@android:color/black"/>
      	<LinearLayout
		    android:id="@+id/layout_container_period"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
	        android:orientation="vertical" >
	    
            <TextView
	        android:id="@+id/text_period_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/stats_period"  />
            
      	</LinearLayout>
      	
	</LinearLayout>
</LinearLayout>